Solved Second Stretch

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -46,5 +46,21 @@
 }
 
 
+.close{
+  background: red;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  outline: none;
+
+  &:hover{
+    transform: scale(1.09);
+  }
+}
+
+.clickButton{
+  display: none;
+}
+
 
 
