--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,19 @@
 .article-open {
   height: 400px;
 }
+.close {
+  background: red;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  outline: none;
+}
+.close:hover {
+  transform: scale(1.09);
+}
+.clickButton {
+  display: none;
+}
 .menu-button {
   position: absolute;
   left: 20px;
@@ -91,17 +104,18 @@
 .menu--animated {
   animation: expand 1s ease-in-out;
 }
+.menu--close {
+  animation: close 1s ease-in-out;
+}
 .font-increase {
   animation: increase 1s ease-in-out;
 }
 @keyframes expand {
   from {
     width: 0px;
-    font-size: 0 !important;
   }
   to {
     width: 350px;
-    font-size: 32px;
   }
 }
 @keyframes increase {
@@ -110,6 +124,11 @@
   }
   to {
     font-size: 32px;
+  }
+}
+@keyframes close {
+  to {
+    width: 0;
   }
 }
 /* It is important to note, you will not be writing any CSS in this file*/
